--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
                 <img src="img/logo.png" alt="Logo">
             </div>
             <div id="search-div">
+                <i class="fa fa-search" id="icon"></i>
                 <input type="text" id="search">
             </div>
             <div id="btn-div">
-
+                <button id="btns">Google Search</button>
+                <button id="btns">I'm Feeling Lucky</button>
             </div>
         </div>
     </div>
