--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
 <body>
     <div id="navbar">
         &nbsp;
-        <div>
+        <div id="left">
+            <a href="#">About</a>
+            <a href="#">Store</a>
+        </div>
+        <div id="right">
             <a href="#">Images</a>
-            <a href="#">Sign In</a>
+            <a href="#" id="sign-in">Sign In</a>
             <a href="#"><i class="fa fa-th fa-lg"></i></a>
         </div>
     </div>
@@ -25,12 +29,13 @@
                 <img src="img/logo.png" alt="Logo">
             </div>
             <div id="search-div">
-                <i class="fa fa-search" id="icon"></i>
+                <i class="fa fa-search" id="icon-srch"></i>
                 <input type="text" id="search">
+                <i class="fa fa-microphone" id="icon-mic"></i>
             </div>
             <div id="btn-div">
-                <button id="btns">Google Search</button>
-                <button id="btns">I'm Feeling Lucky</button>
+                <button class="btns" id="btn1">Google Search</button>
+                <button class="btns" id="btn2">I'm Feeling Lucky</button>
             </div>
         </div>
     </div>
